test/error/sema/primitive-params-cant-be-mutable.dsk
func f(mut x: int) -> void
    return
end
